--- a/index.html
+++ b/index.html
@@ -1,280 +1,71 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="css/leaflet.css">
-        <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <style>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="css/leaflet.css">
+    <link rel="stylesheet" href="css/qgis2web.css">
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+    <style>
         html, body, #map {
             width: 100%;
             height: 100%;
             padding: 0;
             margin: 0;
         }
-        </style>
-        <title></title>
-    </head>
-    <body>
-        <div id="map">
-        </div>
-        <script src="js/qgis2web_expressions.js"></script>
-        <script src="js/leaflet.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="js/leaflet.pattern.js"></script>
-        <script src="js/leaflet-hash.js"></script>
-        <script src="js/Autolinker.min.js"></script>
-        <script src="js/rbush.min.js"></script>
-        <script src="js/labelgun.min.js"></script>
-        <script src="js/labels.js"></script>
-        <script src="data/StateRegionBoundary_2.js"></script>
-        <script src="data/DHIS2TrainingnotCompleteTownship_3.js"></script>
-        <script src="data/DHIS2TrainingCompletedTownship_4.js"></script>
-        <script src="data/DHIS2NonReportingTownship_5.js"></script>
-        <script>
+    </style>
+    <title></title>
+</head>
+<body>
+    <div id="map"></div>
+    <script src="js/qgis2web_expressions.js"></script>
+    <script src="js/leaflet.js"></script>
+    <script src="js/leaflet.rotatedMarker.js"></script>
+    <script src="js/leaflet.pattern.js"></script>
+    <script src="js/leaflet-hash.js"></script>
+    <script src="js/Autolinker.min.js"></script>
+    <script src="js/rbush.min.js"></script>
+    <script src="js/labelgun.min.js"></script>
+    <script src="js/labels.js"></script>
+    <script src="data/StateRegionBoundary_2.js"></script>
+    <script src="data/DHIS2TrainingnotCompleteTownship_3.js"></script>
+    <script src="data/DHIS2TrainingCompletedTownship_4.js"></script>
+    <script src="data/DHIS2NonReportingTownship_5.js"></script>
+    <script>
         var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
-        })
+            zoomControl: true,
+            maxZoom: 28,
+            minZoom: 1
+        });
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
-        var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
+        var autolinker = new Autolinker({ truncate: { length: 30, location: 'smart' } });
         var bounds_group = new L.featureGroup([]);
+
+        function makeResponsive() {
+            var bounds = bounds_group.getBounds();
+            map.fitBounds(bounds);
+
+            var maxZoom = Math.min(28, map.getMaxZoom());
+            map.setMaxZoom(maxZoom);
+        }
+
         function setBounds() {
-            if (bounds_group.getLayers().length) {
-                map.fitBounds(bounds_group.getBounds());
-            }
+            makeResponsive();
         }
+
+        window.addEventListener('resize', function () {
+            makeResponsive();
+        });
+
         map.createPane('pane_GoogleSatellite_0');
-        map.getPane('pane_GoogleSatellite_0').style.zIndex = 400;
-        var layer_GoogleSatellite_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
-            pane: 'pane_GoogleSatellite_0',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 22
-        });
-        layer_GoogleSatellite_0;
-        map.addLayer(layer_GoogleSatellite_0);
-        map.createPane('pane_OpenStreetMap_1');
-        map.getPane('pane_OpenStreetMap_1').style.zIndex = 401;
-        var layer_OpenStreetMap_1 = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            pane: 'pane_OpenStreetMap_1',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 19
-        });
-        layer_OpenStreetMap_1;
-        map.addLayer(layer_OpenStreetMap_1);
-        function pop_StateRegionBoundary_2(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['OBJECTID'] !== null ? autolinker.link(feature.properties['OBJECTID'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST'] !== null ? autolinker.link(feature.properties['ST'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST_PCODE'] !== null ? autolinker.link(feature.properties['ST_PCODE'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST_RG'] !== null ? autolinker.link(feature.properties['ST_RG'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST_MMR'] !== null ? autolinker.link(feature.properties['ST_MMR'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['PCode_V'] !== null ? autolinker.link(feature.properties['PCode_V'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
+        // ... (existing code for tile layers, GeoJSON layers, etc.)
 
-        function style_StateRegionBoundary_2_0() {
-            return {
-                pane: 'pane_StateRegionBoundary_2',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_StateRegionBoundary_2');
-        map.getPane('pane_StateRegionBoundary_2').style.zIndex = 402;
-        map.getPane('pane_StateRegionBoundary_2').style['mix-blend-mode'] = 'normal';
-        var layer_StateRegionBoundary_2 = new L.geoJson(json_StateRegionBoundary_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_StateRegionBoundary_2',
-            layerName: 'layer_StateRegionBoundary_2',
-            pane: 'pane_StateRegionBoundary_2',
-            onEachFeature: pop_StateRegionBoundary_2,
-            style: style_StateRegionBoundary_2_0,
-        });
-        bounds_group.addLayer(layer_StateRegionBoundary_2);
-        map.addLayer(layer_StateRegionBoundary_2);
-        function pop_DHIS2TrainingnotCompleteTownship_3(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST'] !== null ? autolinker.link(feature.properties['ST'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS'] !== null ? autolinker.link(feature.properties['TS'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS_MMR'] !== null ? autolinker.link(feature.properties['TS_MMR'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_DHIS2TrainingnotCompleteTownship_3_0() {
-            return {
-                pane: 'pane_DHIS2TrainingnotCompleteTownship_3',
-                opacity: 1,
-                color: 'rgba(35,35,35,0.5)',
-                dashArray: '1,5',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(240,246,0,0.5)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_DHIS2TrainingnotCompleteTownship_3');
-        map.getPane('pane_DHIS2TrainingnotCompleteTownship_3').style.zIndex = 403;
-        map.getPane('pane_DHIS2TrainingnotCompleteTownship_3').style['mix-blend-mode'] = 'normal';
-        var layer_DHIS2TrainingnotCompleteTownship_3 = new L.geoJson(json_DHIS2TrainingnotCompleteTownship_3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_DHIS2TrainingnotCompleteTownship_3',
-            layerName: 'layer_DHIS2TrainingnotCompleteTownship_3',
-            pane: 'pane_DHIS2TrainingnotCompleteTownship_3',
-            onEachFeature: pop_DHIS2TrainingnotCompleteTownship_3,
-            style: style_DHIS2TrainingnotCompleteTownship_3_0,
-        });
-        bounds_group.addLayer(layer_DHIS2TrainingnotCompleteTownship_3);
-        map.addLayer(layer_DHIS2TrainingnotCompleteTownship_3);
-        function pop_DHIS2TrainingCompletedTownship_4(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST'] !== null ? autolinker.link(feature.properties['ST'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS'] !== null ? autolinker.link(feature.properties['TS'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS_MMR'] !== null ? autolinker.link(feature.properties['TS_MMR'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_DHIS2TrainingCompletedTownship_4_0() {
-            return {
-                pane: 'pane_DHIS2TrainingCompletedTownship_4',
-                opacity: 1,
-                color: 'rgba(35,35,35,0.5)',
-                dashArray: '1,5',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(6,214,160,0.5)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_DHIS2TrainingCompletedTownship_4');
-        map.getPane('pane_DHIS2TrainingCompletedTownship_4').style.zIndex = 404;
-        map.getPane('pane_DHIS2TrainingCompletedTownship_4').style['mix-blend-mode'] = 'normal';
-        var layer_DHIS2TrainingCompletedTownship_4 = new L.geoJson(json_DHIS2TrainingCompletedTownship_4, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_DHIS2TrainingCompletedTownship_4',
-            layerName: 'layer_DHIS2TrainingCompletedTownship_4',
-            pane: 'pane_DHIS2TrainingCompletedTownship_4',
-            onEachFeature: pop_DHIS2TrainingCompletedTownship_4,
-            style: style_DHIS2TrainingCompletedTownship_4_0,
-        });
-        bounds_group.addLayer(layer_DHIS2TrainingCompletedTownship_4);
-        map.addLayer(layer_DHIS2TrainingCompletedTownship_4);
-        function pop_DHIS2NonReportingTownship_5(feature, layer) {
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ST'] !== null ? autolinker.link(feature.properties['ST'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS'] !== null ? autolinker.link(feature.properties['TS'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['TS_MMR'] !== null ? autolinker.link(feature.properties['TS_MMR'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_DHIS2NonReportingTownship_5_0() {
-            return {
-                pane: 'pane_DHIS2NonReportingTownship_5',
-                opacity: 1,
-                color: 'rgba(35,35,35,0.5)',
-                dashArray: '1,5',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(252,68,15,0.5)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_DHIS2NonReportingTownship_5');
-        map.getPane('pane_DHIS2NonReportingTownship_5').style.zIndex = 405;
-        map.getPane('pane_DHIS2NonReportingTownship_5').style['mix-blend-mode'] = 'normal';
-        var layer_DHIS2NonReportingTownship_5 = new L.geoJson(json_DHIS2NonReportingTownship_5, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_DHIS2NonReportingTownship_5',
-            layerName: 'layer_DHIS2NonReportingTownship_5',
-            pane: 'pane_DHIS2NonReportingTownship_5',
-            onEachFeature: pop_DHIS2NonReportingTownship_5,
-            style: style_DHIS2NonReportingTownship_5_0,
-        });
-        bounds_group.addLayer(layer_DHIS2NonReportingTownship_5);
-        map.addLayer(layer_DHIS2NonReportingTownship_5);
-        var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/DHIS2NonReportingTownship_5.png" /> DHIS2 Non-Reporting Township': layer_DHIS2NonReportingTownship_5,'<img src="legend/DHIS2TrainingCompletedTownship_4.png" /> DHIS2 Training Completed Township': layer_DHIS2TrainingCompletedTownship_4,'<img src="legend/DHIS2TrainingnotCompleteTownship_3.png" /> DHIS2 Training not Complete Township': layer_DHIS2TrainingnotCompleteTownship_3,'<img src="legend/StateRegionBoundary_2.png" /> State & Region Boundary': layer_StateRegionBoundary_2,"OpenStreetMap": layer_OpenStreetMap_1,"Google Satellite": layer_GoogleSatellite_0,},{collapsed:false}).addTo(map);
-        setBounds();
-        var i = 0;
-        layer_StateRegionBoundary_2.eachLayer(function(layer) {
-            var context = {
-                feature: layer.feature,
-                variables: {}
-            };
-            layer.bindTooltip((layer.feature.properties['ST'] !== null?String('<div style="color: #323232; font-size: 10pt; font-weight: bold; font-family: \'Arial Narrow\', sans-serif;">' + layer.feature.properties['ST']) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css_StateRegionBoundary_2'});
-            labels.push(layer);
-            totalMarkers += 1;
-              layer.added = true;
-              addLabel(layer, i);
-              i++;
-        });
-        resetLabels([layer_StateRegionBoundary_2]);
-        map.on("zoomend", function(){
-            resetLabels([layer_StateRegionBoundary_2]);
-        });
-        map.on("layeradd", function(){
-            resetLabels([layer_StateRegionBoundary_2]);
-        });
-        map.on("layerremove", function(){
-            resetLabels([layer_StateRegionBoundary_2]);
-        });
-        </script>
-    </body>
+        // Add the makeResponsive function to the end of the script
+        makeResponsive();
+    </script>
+</body>
 </html>
